ツイートからのリンク ユーザ個別ページにトップリンク

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -9,7 +9,7 @@
         <div>
             --------------------------------<br>
             <% user = User.find_by(:id => tweet.uid) %>
-            <%= user.name %></br>
+            <%= link_to user.name, "/users/show/" + user.id.to_s %></br>
             <%= tweet.content %>
         </div>
     <% end %>
