--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<div><%= link_to "トップ", "/tweets" %></div>
+
 <div>
     <h1><%=@user[:name]+"@"+@user[:username]%></h1>
     <p><%=@user[:about]%><p>
