ツイート一覧を修正

--- a/app/views/tweets/main.html.erb
+++ b/app/views/tweets/main.html.erb
@@ -1,4 +1,4 @@
-<div><%= link_to "ログアウト", "/logout" %></div>
+<div><%= link_to "ログアウト", "/logout" %>&nbsp;&nbsp;<%= link_to "ユーザー一覧", "/users" %></div>
 
 <% flash.each do |key, value|%>
     <%= content_tag(:div, value, class: "#{key}") %>
@@ -17,7 +17,7 @@
         <div>
             --------------------------------<br>
             <% user = User.find_by(:id => tweet.uid) %>
-            <%= link_to user.name, "/users/show/" + user.id.to_s %></br>
+            <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %></br>
             <%= tweet.content %>
         </div>
     <% end %>
