--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div><%= link_to "トップ", "/tweets" %></div>
+
+<div>
+    ユーザー一覧</br>
+    <% @users.each do |user|%>
+        <div>
+            <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %></br>
+            ------------------------------</br>
+    </div>
+    <% end %>
+</div>
