リツイート基礎機能

--- a/app/views/tweets/main.html.erb
+++ b/app/views/tweets/main.html.erb
@@ -8,6 +8,7 @@
 <%= form_for Tweet.new do |f| %>
     <%= f.label :content, "ツイートする" %>
     <%= f.text_area :content %>
+    <%= f.hidden_field :rtid, value: TYPE_NOT_RETWEET %>
     <%= f.submit "送信"%>
 <% end %>
 </div>
@@ -18,8 +19,21 @@
             --------------------------------<br>
             <% if tweet.rtid == TYPE_NOT_RETWEET then %>
                 <% user = User.find_by(:id => tweet.uid) %>
+                <% sendId = tweet.id%>
                 <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %></br>
                 <%= tweet.content %>
+            <% else %>
+                <% user = User.find_by(:id => tweet.uid) %>
+                <% originalTweet = Tweet.find_by(:id => tweet.rtid) %>
+                <% originalUser = User.find_by(:id => originalTweet.uid) %>
+                <% sendId = originalTweet.id%>
+                <%= link_to originalUser.name + "@" + originalUser.username, "/users/show/" + originalUser.id.to_s %></br>
+                <%= originalTweet.content %></br>
+                <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>さんがリツイート</br>
+            <% end %>
+            <%= form_for Tweet.new do |f| %>
+                <%= f.hidden_field :rtid, value: sendId %>
+                <%= f.submit "RT" %>
             <% end %>
         </div>
     <% end %>
