変数名の変更

--- a/app/views/tweets/main.html.erb
+++ b/app/views/tweets/main.html.erb
@@ -18,20 +18,20 @@
             --------------------------------<br>
             <% if tweet.rtid == TYPE_NOT_RETWEET then %>
                 <% user = User.find_by(:id => tweet.uid) %>
-                <% sendId = tweet.id%>
+                <% send_tweet_id = tweet.id%>
                 <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>
                 <%= simple_format(h(tweet.content)) %>
             <% else %>
                 <% user = User.find_by(:id => tweet.uid) %>
-                <% originalTweet = Tweet.find_by(:id => tweet.rtid) %>
-                <% originalUser = User.find_by(:id => originalTweet.uid) %>
-                <% sendId = originalTweet.id%>
-                <%= link_to originalUser.name + "@" + originalUser.username, "/users/show/" + originalUser.id.to_s %>&nbsp;&nbsp;
+                <% original_tweet = Tweet.find_by(:id => tweet.rtid) %>
+                <% original_user = User.find_by(:id => original_tweet.uid) %>
+                <% send_tweet_id = original_tweet.id%>
+                <%= link_to original_user.name + "@" + original_user.username, "/users/show/" + original_user.id.to_s %>&nbsp;&nbsp;
                 <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>さんがリツイート
-                <%= simple_format(h(originalTweet.content)) %>
+                <%= simple_format(h(original_tweet.content)) %>
             <% end %>
             <%= form_for Tweet.new do |f| %>
-                <%= f.hidden_field :rtid, value: sendId %>
+                <%= f.hidden_field :rtid, value: send_tweet_id %>
                 <%= f.submit "RT" %>
             <% end %>
         </div>
