時計を少し修正　バグあり　要修正

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -15,10 +15,10 @@
                 <%= Time.zone.now.day - tweet.created_at.day %>日前
             <% elsif Time.zone.now.hour - tweet.created_at.hour > 0 then %>
                 <%= Time.zone.now.hour - tweet.created_at.hour %>時間前
-            <% elsif Time.zone.now.min - tweet.created_at.hour > 0 then %>
-                <%= Time.zone.now.min - tweet.created_at.hour %>分前
-            <% elsif Time.zone.now.sec - tweet.created_at.hour > 0 then %>
-                <%= Time.zone.now.sec - tweet.created_at.hour %>秒前
+            <% elsif Time.zone.now.min - tweet.created_at.min > 0 then %>
+                <%= Time.zone.now.min - tweet.created_at.min %>分前
+            <% else %>
+                <%= Time.zone.now.sec - tweet.created_at.sec %>秒前
             <% end %>
             <%= simple_format(h(tweet.content)) %>
         </div>
