--- a/app/views/tweets/main.html.erb
+++ b/app/views/tweets/main.html.erb
@@ -24,10 +24,10 @@
                     <%= Time.zone.now.day - tweet.created_at.day %>日前
                 <% elsif Time.zone.now.hour - tweet.created_at.hour > 0 then %>
                     <%= Time.zone.now.hour - tweet.created_at.hour %>時間前
-                <% elsif Time.zone.now.min - tweet.created_at.hour > 0 then %>
-                    <%= Time.zone.now.min - tweet.created_at.hour %>分前
-                <% elsif Time.zone.now.sec - tweet.created_at.hour > 0 then %>
-                    <%= Time.zone.now.sec - tweet.created_at.hour %>秒前
+                <% elsif Time.zone.now.min - tweet.created_at.min > 0 then %>
+                    <%= Time.zone.now.min - tweet.created_at.min %>分前
+                <% else %>
+                    <%= Time.zone.now.sec - tweet.created_at.sec %>秒前
                 <% end %>
                 <%= simple_format(h(tweet.content)) %>
             <% else %>
@@ -40,10 +40,10 @@
                     <%= Time.zone.now.day - original_tweet.created_at.day %>日前
                 <% elsif Time.zone.now.hour - original_tweet.created_at.hour > 0 then %>
                     <%= Time.zone.now.hour - original_tweet.created_at.hour %>時間前
-                <% elsif Time.zone.now.min - original_tweet.created_at.hour > 0 then %>
-                    <%= Time.zone.now.min - original_tweet.created_at.hour %>分前
-                <% elsif Time.zone.now.sec - original_tweet.created_at.hour > 0 then %>
-                    <%= Time.zone.now.sec - original_tweet.created_at.hour %>秒前
+                <% elsif Time.zone.now.min - original_tweet.created_at.min > 0 then %>
+                    <%= Time.zone.now.min - original_tweet.created_at.min %>分前
+                <% else %>
+                    <%= Time.zone.now.sec - original_tweet.created_at.sec %>秒前
                 <% end %>&nbsp;&nbsp;
                 <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>さんがリツイート
                 <%= simple_format(h(original_tweet.content)) %>
