--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -8,19 +8,11 @@
     <% @tweets.each do |tweet| %>
         <%if tweet.rtid == TYPE_NOT_RETWEET %>
         <div>
-            --------------------------------<br>
             <% user = User.find_by(:id => tweet.uid) %>
             <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>&nbsp;&nbsp;
-            <% if Time.zone.now.day - tweet.created_at.day > 0 then %>
-                <%= Time.zone.now.day - tweet.created_at.day %>日前
-            <% elsif Time.zone.now.hour - tweet.created_at.hour > 0 then %>
-                <%= Time.zone.now.hour - tweet.created_at.hour %>時間前
-            <% elsif Time.zone.now.min - tweet.created_at.min > 0 then %>
-                <%= Time.zone.now.min - tweet.created_at.min %>分前
-            <% else %>
-                <%= Time.zone.now.sec - tweet.created_at.sec %>秒前
-            <% end %>
+            <%= write_time tweet.created_at %>
             <%= simple_format(h(tweet.content)) %>
+            --------------------------------<br>
         </div>
         <% end %>
     <% end %>
