--- a/app/views/tweets/main.html.erb
+++ b/app/views/tweets/main.html.erb
@@ -12,45 +12,28 @@
 <% end %>
 </div>
 
+--------------------------------<br>
+
 <div>
     <% @tweets.each do |tweet| %>
         <div>
-            --------------------------------<br>
+            <% user = User.find_by(:id => tweet.uid) %>
             <% if tweet.rtid == TYPE_NOT_RETWEET then %>
-                <% user = User.find_by(:id => tweet.uid) %>
                 <% send_tweet_id = tweet.id%>
-                <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>&nbsp;&nbsp;
-                <% if Time.zone.now.day - tweet.created_at.day > 0 then %>
-                    <%= Time.zone.now.day - tweet.created_at.day %>日前
-                <% elsif Time.zone.now.hour - tweet.created_at.hour > 0 then %>
-                    <%= Time.zone.now.hour - tweet.created_at.hour %>時間前
-                <% elsif Time.zone.now.min - tweet.created_at.min > 0 then %>
-                    <%= Time.zone.now.min - tweet.created_at.min %>分前
-                <% else %>
-                    <%= Time.zone.now.sec - tweet.created_at.sec %>秒前
-                <% end %>
+                <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>&nbsp;&nbsp;<%= write_time tweet.created_at %>
                 <%= simple_format(h(tweet.content)) %>
             <% else %>
-                <% user = User.find_by(:id => tweet.uid) %>
                 <% original_tweet = Tweet.find_by(:id => tweet.rtid) %>
                 <% original_user = User.find_by(:id => original_tweet.uid) %>
                 <% send_tweet_id = original_tweet.id%>
-                <%= link_to original_user.name + "@" + original_user.username, "/users/show/" + original_user.id.to_s %>&nbsp;&nbsp;
-                <% if Time.zone.now.day - original_tweet.created_at.day > 0 then %>
-                    <%= Time.zone.now.day - original_tweet.created_at.day %>日前
-                <% elsif Time.zone.now.hour - original_tweet.created_at.hour > 0 then %>
-                    <%= Time.zone.now.hour - original_tweet.created_at.hour %>時間前
-                <% elsif Time.zone.now.min - original_tweet.created_at.min > 0 then %>
-                    <%= Time.zone.now.min - original_tweet.created_at.min %>分前
-                <% else %>
-                    <%= Time.zone.now.sec - original_tweet.created_at.sec %>秒前
-                <% end %>&nbsp;&nbsp;
+                <%= link_to original_user.name + "@" + original_user.username, "/users/show/" + original_user.id.to_s %>&nbsp;&nbsp;<%= write_time original_tweet.created_at %>&nbsp;&nbsp;
                 <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>さんがリツイート
                 <%= simple_format(h(original_tweet.content)) %>
             <% end %>
             <%= form_for Tweet.new do |f| %>
                 <%= f.hidden_field :rtid, value: send_tweet_id %>
-                <%= f.submit "RT" %>
+                <%= f.submit "RT" %></br>
+            --------------------------------<br>
             <% end %>
         </div>
     <% end %>
