ヘッダーのCSSを記述

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,32 @@
  *= require_tree .
  *= require_self
  */
+
+a:      {color: #000000}
+a:hover {color: #ff8800}
+
+header  {border-bottom: solid 1px #aaaaaa;
+        margin-bottom: 30px;
+        padding: 5px}
+
+nav     {text-align: right;
+        margin-top: -27px;
+        margin-bottom: 10px}
+
+nav a   {color: #000000;
+        text-decoration: none}
+
+nav ul  {list-style-type: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
+        font-size: 0} 
+
+nav li  {display: inline;
+        font-size: 12px;
+        border-right: solid 1px #aaaaaa;
+        padding-left: 10px;
+        padding-right: 10px
+}
+
+nav li:first-child {border-left: solid 1px #aaaaaa}
