--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,8 +1,12 @@
-<div><%= link_to "ログイン", "/login" %></div>
-
-<% flash.each do |key, value|%>
-    <%= content_tag(:div, value, class: "#{key}") %>
-<% end %>
+<header>
+    test-twitter
+    <nav><ul>
+        <li><%= link_to "ログイン", "/login" %></li>
+    </ul></nav>
+    <% flash.each do |key, value|%>
+        <%= content_tag(:div, value, class: "#{key}") %>
+    <% end %>
+</header>
 
 <div>
     <% @tweets.each do |tweet| %>
