--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the tweets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+header  {border-bottom: solid 1px #aaaaaa;
+        margin-bottom: 30px;
+        padding: 5px}
+
+nav     {text-align: right;
+        margin-top: -27px;
+        margin-bottom: 10px}
+
+nav a   {color: #000000;
+        text-decoration: none}
+
+nav ul  {list-style-type: none;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
+        font-size: 0} 
+
+nav li  {display: inline;
+        font-size: 12px;
+        border-right: solid 1px #aaaaaa;
+        padding-left: 10px;
+        padding-right: 10px
+}
+
+nav li:first-child {border-left: solid 1px #aaaaaa}
