--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#user-block     {position: fixed;
+                top: 65px;
+                float: left;
+                width: 200px;
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+                border: solid 1px #aaaaaa;
+                padding : 30px}
+
+#user-head      {border-bottom: solid 1px #aaaaaa;
+                padding-bottom: 5px;
+                margin-bottom: 5px}
+
+#right-block    {potision: relative;
+                float: right;
+                width: 570px;
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box}
