--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,5 @@
 <header>
+    <div id = "head-fixed">
     test-twitter
     <nav><ul>
         <li><%= link_to "ログイン", "/login" %></li>
@@ -6,18 +7,20 @@
     <% flash.each do |key, value|%>
         <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
+    </div>
 </header>
 
-<div>
-    <% @tweets.each do |tweet| %>
-        <%if tweet.rtid == TYPE_NOT_RETWEET %>
-        <div>
-            <% user = User.find_by(:id => tweet.uid) %>
-            <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>&nbsp;&nbsp;
-            <%= write_time tweet.created_at %>
-            <%= simple_format(h(tweet.content)) %>
-            --------------------------------<br>
-        </div>
+<div id ="container">
+    <div id = "tweet-block">
+        <% @tweets.each do |tweet| %>
+            <%if tweet.rtid == TYPE_NOT_RETWEET %>
+            <div class = "tweet-content">
+                <% user = User.find_by(:id => tweet.uid) %>
+                <%= link_to user.name + "@" + user.username, "/users/show/" + user.id.to_s %>&nbsp;&nbsp;
+                <%= write_time tweet.created_at %>
+                <%= simple_format(h(tweet.content)) %>
+            </div>
+            <% end %>
         <% end %>
-    <% end %>
+    </div>
 </div>
