--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,21 @@
 <header>
+    <div id = "head-fixed">
     test-twitter
     <nav><ul>
         <li><%= link_to "トップ", "/tweets" %></li>
         <% if logged_in? then %>
-        <li><%= link_to "ログアウト", "/logout" %></li>
-        <li><%= link_to "マイページ", "/users/show/" + current_user.id.to_s %></li>
+            <li><%= link_to "ログアウト", "/logout" %></li>
         <% else %>
-        <li><%= link_to "ログイン", "/login" %></li>
+            <li><%= link_to "ログイン", "/login" %></li>
         <% end %>
     </ul></nav>
     <% flash.each do |key, value|%>
         <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
+    </div>
 </header>
 
-
-
-<div>
+<div id = "container">
     ユーザー一覧</br>
     <% if logged_in? then %>
         <%= form_tag(:controller => "follows", :action => "create") do %>
